--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
         <h1>Hello work</h1>
+        <h2>Message: <%= message %></h2>
+
+        <img src="./images/download.png" alt="" />
     </body>
 </html>
